Make streamer token get or create
