# examples/room-manager/src/routes/rooms.ts
@@ -2,17 +2,18 @@ import { FastifyInstance, FastifyReply } from 'fastify';
 
 import { parseError } from '../errors';
 import { fishjamPlugin } from '../plugins';
-import { GetPeerAccessQueryParams, peerEndpointSchema, viewerEndpointSchema } from '../schema';
+import {
+  GetPeerAccessQueryParams,
+  peerEndpointSchema,
+  LivestreamQueryParams,
+  streamEndpointSchema,
+  viewerEndpointSchema,
+} from '../schema';
 import { httpToWebsocket, removeTrailingSlash } from '../utils';
 
 async function getRoomAccessHandler(fastify: FastifyInstance, params: GetPeerAccessQueryParams, res: FastifyReply) {
   try {
-    const accessData = await fastify.fishjam.getPeerAccess(
-      params.roomName,
-      params.peerName,
-      params.roomType,
-      params.public
-    );
+    const accessData = await fastify.fishjam.getPeerAccess(params.roomName, params.peerName, params.roomType);
     const url = httpToWebsocket(fastify.config.FISHJAM_URL);
 
     // When creating a URL object from a URL without a path (e.g., `http://localhost:5002`),
@@ -20,26 +21,6 @@ async function getRoomAccessHandler(fastify: FastifyInstance, params: GetPeerAcc
     const urlWithoutTrailingSlash = removeTrailingSlash(url);
 
     return { ...accessData, url: urlWithoutTrailingSlash };
-  } catch (error: unknown) {
-    const [parsedError, errorCode] = parseError(error);
-
-    res.status(errorCode).send(parsedError.detail);
-  }
-}
-
-async function createLivestreamViewerToken(fastify: FastifyInstance, roomName: string, res: FastifyReply) {
-  try {
-    return await fastify.fishjam.getLivestreamViewerToken(roomName);
-  } catch (error: unknown) {
-    const [parsedError, errorCode] = parseError(error);
-
-    res.status(errorCode).send(parsedError.detail);
-  }
-}
-
-async function createLivestreamStreamerToken(fastify: FastifyInstance, roomName: string, res: FastifyReply) {
-  try {
-    return await fastify.fishjam.getLivestreamStreamerToken(roomName);
   } catch (error: unknown) {
     const [parsedError, errorCode] = parseError(error);
 
@@ -66,9 +47,33 @@ export async function rooms(fastify: FastifyInstance) {
     (req, res) => createLivestreamViewerToken(fastify, req.params.roomName, res)
   );
 
-  fastify.get<{ Params: { roomName: string } }, unknown>(
-    '/:roomName/livestream-streamer-token',
-    { schema: viewerEndpointSchema },
-    (req, res) => createLivestreamStreamerToken(fastify, req.params.roomName, res)
+  fastify.get<{ Querystring: LivestreamQueryParams }, unknown>(
+    '/livestream',
+    { schema: streamEndpointSchema },
+    (req, res) => createLivestreamStreamerToken(fastify, req.query, res)
   );
+}
+
+async function createLivestreamViewerToken(fastify: FastifyInstance, roomName: string, res: FastifyReply) {
+  try {
+    return await fastify.fishjam.getLivestreamViewerToken(roomName);
+  } catch (error: unknown) {
+    const [parsedError, errorCode] = parseError(error);
+
+    res.status(errorCode).send(parsedError.detail);
+  }
+}
+
+async function createLivestreamStreamerToken(
+  fastify: FastifyInstance,
+  params: LivestreamQueryParams,
+  res: FastifyReply
+) {
+  try {
+    return fastify.fishjam.getLivestreamStreamerToken(params.roomName, params.public);
+  } catch (error: unknown) {
+    const [parsedError, errorCode] = parseError(error);
+
+    res.status(errorCode).send(parsedError.detail);
+  }
 }
