# examples/room-manager/src/schema.ts
@@ -13,6 +13,10 @@ export interface GetPeerAccessQueryParams {
   roomName: string;
   peerName: string;
   roomType: RoomConfigRoomTypeEnum;
+}
+
+export interface LivestreamQueryParams {
+  roomName: string;
   public: boolean;
 }
 
@@ -20,6 +24,11 @@ export interface PeerAccessData {
   peer: { id: string; name: string };
   room: { id: string; name: string };
   peerToken: string;
+}
+
+export interface LivestreamData {
+  room: { id: string; name: string };
+  token: string;
 }
 
 const response200 = S.object()
@@ -35,24 +44,41 @@ const baseErrorResponse = S.object()
 
 const errorResponse500 = baseErrorResponse.prop('cause', S.string());
 
-const parameterSchema = S.object()
+const roomConfigSchema = S.object()
   .prop('roomName', S.string().required())
   .prop('peerName', S.string().required())
   .prop(
     'roomType',
     S.string()
-      .enum(['conference', 'audio_only', 'livestream'] satisfies RoomConfigRoomTypeEnum[])
+      .enum(['conference', 'audio_only'] satisfies RoomConfigRoomTypeEnum[])
       .default('conference')
-  )
+  );
+
+const streamConfigSchema = S.object()
+  .prop('roomName', S.string().required())
   .prop('public', S.boolean().default(false));
 
 export const peerEndpointSchema: FastifySchema = {
-  querystring: parameterSchema,
-  operationId: 'getToken',
+  querystring: roomConfigSchema,
+  operationId: 'getPeerToken',
   response: {
     200: response200,
-    410: baseErrorResponse,
+    401: baseErrorResponse,
     500: errorResponse500,
+  },
+  tags: ['room'],
+};
+
+const streamResponse = S.object()
+  .prop('token', S.string())
+  .prop('room', S.object().prop('id', S.string()).prop('name', S.string()));
+
+export const streamEndpointSchema: FastifySchema = {
+  querystring: streamConfigSchema,
+  operationId: 'getStreamToken',
+  response: {
+    200: streamResponse,
+    404: baseErrorResponse,
   },
   tags: ['room'],
 };
@@ -61,7 +87,7 @@ const viewerTokenResponse = S.object().prop('token', S.string());
 
 export const viewerEndpointSchema: FastifySchema = {
   params: S.object().prop('roomName', S.string().required()),
-  operationId: 'getBroadcastViewerToken',
+  operationId: 'getViewerToken',
   response: {
     200: viewerTokenResponse,
     404: baseErrorResponse,
